k8s/manifests/demo-privileged-denied.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privileged-demo
  namespace: security-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: privileged-demo
  template:
    metadata:
      labels:
        app: privileged-demo
    spec:
      containers:
        - name: shell
          image: busybox:1.36
          command:
            - sh
            - -c
            - sleep 3600
          securityContext:
            privileged: true
