k8s/manifests/demo-east-west.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: security-lab
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nginxinc/nginx-unprivileged:1.29-alpine
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 101
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: security-lab
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: security-lab
  labels:
    app: frontend
spec:
  containers:
    - name: frontend
      image: busybox:1.36
      command:
        - sh
        - -c
        - sleep 36000
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
